[package]
name = "cache-effishient"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "naive"

[[bin]]
name = "pufferfish"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
