[package]
name = "cache-effishient"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "naive"

[[bin]]
name = "pufferfish"

[[bin]]
name = "genq"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
xorf = "0.12.0"
